Fixed Z-index

--- a/screen.css
+++ b/screen.css
@@ -25,6 +25,7 @@ header{
     position: sticky;
     overflow: hidden;
     top: 0;
+    z-index: 10;
 }
 
 .header-title{
@@ -244,6 +245,7 @@ time{
     background-color: var(--darkGray);
     font-size: 1.5em;
     color: var(--lightGreen);
+    margin: 20px;
 }
 
 .projects h3{
